--- a/LinksyWidgetExtension.entitlements
+++ b/LinksyWidgetExtension.entitlements
@@ -6,5 +6,9 @@
 	<array>
 		<string>group.fm.folder.linksy</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)fm.folder.Linksy</string>
+	</array>
 </dict>
 </plist>
